[package]
name = "yt-play"
version = "0.1.2"
edition = "2024"
description = "A CLI utility that synchronises YouTube playlists to local directories for offline playback."
license = "MIT"
repository = "https://github.com/ethanhawksley/yt-play"
homepage = "https://hawksley.dev"
readme = "README.md"
keywords = ["youtube", "playlist", "mpv", "yt-dlp", "offline"]
categories = ["command-line-utilities", "multimedia::audio"]

exclude = [".idea/*", "bacon.toml"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
serde_json = "1.0.145"
url = "2.5.7"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
